--- a/packages/auto_updater/pubspec.yaml
+++ b/packages/auto_updater/pubspec.yaml
@@ -38,5 +38,5 @@ flutter:
         default_package: auto_updater_macos
       windows:
         default_package: auto_updater_windows
-      linux:
-        default_package: auto_updater_linux
+      #linux:
+        #default_package: auto_updater_linux
